# image-based-encrpytion

./: .gitignore  CMakeLists.txt  README.md  go.mod
cmd/server/: main.go
docs/: architecture.md
include/lavaencrypt/: encryptor.h  entropy_extractor.h  image_processor.h  utils.h
internal/entropy/: image_source.go  image_source_test.go  mixer.go  mixer_test.go  source.go
internal/handlers/: random.go  random_test.go
internal/randomizer/: csprng.go  csprng_test.go
internal/service/: entropy_service.go  entropy_service_test.go
internal/utils/: validate.go  validate_test.go
samples/: README.md
src/: CMakeLists.txt  encryptor.cpp  entropy_extractor.cpp  image_processor.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  test_encryptor.cpp  test_entropy_extractor.cpp  test_image_processor.cpp  test_utils.cpp
